data/derived/comb/progs/unify/prog6274.ml.out
Characters 81-85:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type 'a -> 'a
       but an expression was expected of type int
